--- a/source/web/algemeen/gevraagd.html
+++ b/source/web/algemeen/gevraagd.html
@@ -1,7 +1,7 @@
 
 </div><div class="dw-content">
 <h3 class="sectionedit1" id="gevraagd">Gevraagd</h3>
-<div class="level3">
+<div >
 
 <p>
 Op deze pagina staat een overzicht van dingen die erg fijn zouden zijn op de wiki. Iedereen is vrij om aan te vullen wat hij of zij wil, maar als je wat inspiratie kunt gebruiken dan kun je eens een kijkje nemen in de onderstaande lijst:
