--- a/source/web/algemeen/nieuws.html
+++ b/source/web/algemeen/nieuws.html
@@ -5,23 +5,23 @@
 
 <div class="dw-content">
 <h3 class="sectionedit1" id="nieuwspagina_danswiki">Nieuwspagina Danswiki</h3>
-<div class="level3">
+<div >
 
 <p>
 Op deze pagina worden nieuwsberichten over de danswiki toegevoegd:
 </p>
 <ul>
-<li class="level1"><div class="li">8-7-2016 - De talkpage plugin is gedeactiveerd aangezien de nieuwe DokuWiki (Bootstrap) nu zelf Discussion pagina's ondersteunt met een handiger linkje. </div>
+<li ><div class="li">8-7-2016 - De talkpage plugin is gedeactiveerd aangezien de nieuwe DokuWiki (Bootstrap) nu zelf Discussion pagina's ondersteunt met een handiger linkje. </div>
 </li>
-<li class="level1"><div class="li">8-7-2016 - DokuWiki van de DansWiki is geupdate naar de laatste versie samen met alle plugins.</div>
+<li ><div class="li">8-7-2016 - DokuWiki van de DansWiki is geupdate naar de laatste versie samen met alle plugins.</div>
 </li>
-<li class="level1"><div class="li">6-4-2016 - De hele voormalige DansWiki van de Gonnagles is opgenomen in de huidige DansWiki voor zover het nog terug te halen was.</div>
+<li ><div class="li">6-4-2016 - De hele voormalige DansWiki van de Gonnagles is opgenomen in de huidige DansWiki voor zover het nog terug te halen was.</div>
 </li>
-<li class="level1"><div class="li">6-4-2016 - De DansWiki werkt vanaf nu onder het domein van <a class="urlextern" href="" rel="nofollow" title="">Balfolk Enschede</a>.</div>
+<li ><div class="li">6-4-2016 - De DansWiki werkt vanaf nu onder het domein van <a class="urlextern" href="" rel="nofollow" title="">Balfolk Enschede</a>.</div>
 </li>
-<li class="level1"><div class="li">16-3-2016 - Ondersteuning voor meertaligheid is toegevoegd.</div>
+<li ><div class="li">16-3-2016 - Ondersteuning voor meertaligheid is toegevoegd.</div>
 </li>
-<li class="level1"><div class="li">11-3-2016 - Eerste versie van de DansWiki staat weer online.</div>
+<li ><div class="li">11-3-2016 - Eerste versie van de DansWiki staat weer online.</div>
 </li>
 </ul>
 
