--- a/source/web/algemeen/terminologie.html
+++ b/source/web/algemeen/terminologie.html
@@ -1,7 +1,7 @@
 
 </div><div class="dw-content">
 <h3 class="sectionedit1" id="terminologie">Terminologie</h3>
-<div class="level3">
+<div >
 
 <p>
 Op deze pagina staat een overzicht van gebruikte begrippen en afkortingen.
@@ -42,9 +42,9 @@ Dit is een afzet van één van beide voeten of van allebei tegelijk, daarna een 
 1. afzetten van beide en neerkomen op beide:
 </p>
 <ul>
-<li class="level1"><div class="li"><em>Sluitsprong:</em>         neerkomen op gesloten voeten</div>
+<li ><div class="li"><em>Sluitsprong:</em>         neerkomen op gesloten voeten</div>
 </li>
-<li class="level1"><div class="li"><em>Spreidsprong:</em>      neerkomen in spreidstand</div>
+<li ><div class="li"><em>Spreidsprong:</em>      neerkomen in spreidstand</div>
 </li>
 </ul>
 
@@ -52,13 +52,13 @@ Dit is een afzet van één van beide voeten of van allebei tegelijk, daarna een 
 2. afzetten van twee voeten en neerkomen op één:
 </p>
 <ul>
-<li class="level1"><div class="li">op de plaats </div>
+<li ><div class="li">op de plaats </div>
 </li>
-<li class="level1"><div class="li">Zijwaarts </div>
+<li ><div class="li">Zijwaarts </div>
 </li>
-<li class="level1"><div class="li">voorwaarts </div>
+<li ><div class="li">voorwaarts </div>
 </li>
-<li class="level1"><div class="li">achterwaarts </div>
+<li ><div class="li">achterwaarts </div>
 </li>
 </ul>
 
@@ -133,11 +133,11 @@ dubbele gewichtswisseling met aansluitpas
 Bijvoorbeeld met Links te beginnen:
 </p>
 <ol>
-<li class="level1"><div class="li">verplaats linker been met gewicht</div>
+<li ><div class="li">verplaats linker been met gewicht</div>
 </li>
-<li class="level1"><div class="li">sluit rechterbeen aan met gewicht</div>
+<li ><div class="li">sluit rechterbeen aan met gewicht</div>
 </li>
-<li class="level1"><div class="li">verplaats linkerbeen met gewicht </div>
+<li ><div class="li">verplaats linkerbeen met gewicht </div>
 </li>
 </ol>
 
@@ -214,7 +214,7 @@ Hieronder enkele varianten±
 </div>
 
 <h5 id="wisselpas1">Wisselpas</h5>
-<div class="level5">
+<div >
 
 <p>
 Drie wandelpassen in het ritme kort/kort/lang, waarbij de tweede pas meestal een aansluitpas is
@@ -223,7 +223,7 @@ Drie wandelpassen in het ritme kort/kort/lang, waarbij de tweede pas meestal een
 </div>
 
 <h5 id="schotse_pas">Schotse pas</h5>
-<div class="level5">
+<div >
 
 <p>
 Drie wandel- of looppassen plus een hup.
@@ -278,7 +278,7 @@ Niet te verwarren met het “SPINNEN” - dat doe je met z'n tweeën.
 </div>
 
 <h3 class="sectionedit19" id="draaipassen">Draaipassen</h3>
-<div class="level3">
+<div >
 
 <p>
 Sommige van bovenstaande passen kunnen door paren draaiend worden uitgevoerd. Dan krijg je bijvoorbeeld:
@@ -341,7 +341,7 @@ Doe je dit samen dan ben je aan het SPINNEN.
 </div>
 
 <h3 class="sectionedit26" id="het_draaien">Het draaien</h3>
-<div class="level3">
+<div >
 
 <p>
 Bij al deze passen behalve bij de SPINPAS werken de partners met tegengestelde voeten (man links vrouw rechts)
@@ -358,7 +358,7 @@ Het TUSSENPLAATSEN van de voet gebeurt:
 </div>
 
 <h5 id="tweestapsdraai_en_stop-hop_in_de_rondte">Tweestapsdraai en stop-hop in de rondte</h5>
-<div class="level5">
+<div >
 
 <p>
 Iedere keer dat de RECHTER voet wordt neergezet
@@ -367,7 +367,7 @@ Iedere keer dat de RECHTER voet wordt neergezet
 </div>
 
 <h5 id="glijpolka">Glijpolka</h5>
-<div class="level5">
+<div >
 
 <p>
 Op de “slow” van het quick-quick-slow ritme. Elke tel draai je 1/4
@@ -376,7 +376,7 @@ Op de “slow” van het quick-quick-slow ritme. Elke tel draai je 1/4
 </div>
 
 <h5 id="wals">Wals</h5>
-<div class="level5">
+<div >
 
 <p>
 Op de eerste tel van elke maat
@@ -385,7 +385,7 @@ Op de eerste tel van elke maat
 </div>
 
 <h5 id="polka">Polka</h5>
-<div class="level5">
+<div >
 
 <p>
 Eigenlijk draai je steeds een halve slag op het zweefmoment van de “hup”. Voet wordt niet zo erg duidelijk tussen de voeten van de partner geplaatst.
@@ -394,7 +394,7 @@ Eigenlijk draai je steeds een halve slag op het zweefmoment van de “hup”. Vo
 </div>
 
 <h5 id="spinnen">Spinnen</h5>
-<div class="level5">
+<div >
 
 <p>
 Hierbij worden de RECHTER voeten met de BUITENKANTEN naast elkaar gezet. 
