--- a/source/web/dansen/an_dro.html
+++ b/source/web/dansen/an_dro.html
@@ -1,7 +1,7 @@
 
 </div><div class="dw-content">
 <h3 class="sectionedit1" id="an_dro">An Dro</h3>
-<div class="level3">
+<div >
 
 <p>
 Dit is een (meestal) rustige, haast meditative dans.
@@ -21,19 +21,19 @@ Iedereen in 1 of meerdere lange slierten. Waar mannen en vrouwen in de rij staan
 <h4 class="sectionedit3" id="basis">Basis</h4>
 <div class="level4">
 <ul>
-<li class="level1"><div class="li">Volg-de-leider: houdt elkaar vast bij de pinken, palm van de hand wijst omlaag. Je haakt je pink in de pink van de persoon naast je. Ook al hebben alleen de pinken elkaar vast, de hele onderarm houdt contact. Op die manier 'verlies' je elkaar niet. De leider en laatste kunnen de vrije arm op de rug doen. In Bretagne wordt dit heel vaak ook niet gedaan. Voor dames: mocht je iets met de vrije arm willen doen, pak dan je rok in je hand. De hand op de rug is traditioneel iets voor mannen.</div>
+<li ><div class="li">Volg-de-leider: houdt elkaar vast bij de pinken, palm van de hand wijst omlaag. Je haakt je pink in de pink van de persoon naast je. Ook al hebben alleen de pinken elkaar vast, de hele onderarm houdt contact. Op die manier 'verlies' je elkaar niet. De leider en laatste kunnen de vrije arm op de rug doen. In Bretagne wordt dit heel vaak ook niet gedaan. Voor dames: mocht je iets met de vrije arm willen doen, pak dan je rok in je hand. De hand op de rug is traditioneel iets voor mannen.</div>
 </li>
-<li class="level1"><div class="li">Verplaatsingsrichting is naar links, kijkrichting is vooruit. Je beweegt dus zijwaarts, en altijd alleen naar links.</div>
+<li ><div class="li">Verplaatsingsrichting is naar links, kijkrichting is vooruit. Je beweegt dus zijwaarts, en altijd alleen naar links.</div>
 </li>
 <li class="level1 node"><div class="li">Patroon voeten van 2x vier tellen (dus twee maten):</div>
 <ul>
-<li class="level2"><div class="li">I: wisselpas naar links gevolgd door een tel rust (links - rechts - links - rust)</div>
+<li ><div class="li">I: wisselpas naar links gevolgd door een tel rust (links - rechts - links - rust)</div>
 </li>
-<li class="level2"><div class="li">II: wisselpas op de plaats, begint met rechts, gevolgd door een tel rust (rechts - links - rechts - rust) </div>
+<li ><div class="li">II: wisselpas op de plaats, begint met rechts, gevolgd door een tel rust (rechts - links - rechts - rust) </div>
 </li>
 </ul>
 </li>
-<li class="level1"><div class="li">Patroon handen van 2x vier tellen: draaibeweging met handen. De beweging lijkt op een “9”, draai hem van onderaf in met rustpunt op de drie van de eerste maat, daarna bovenlangs weer terug. Deze armbeweging gaat niet hoger dan de schouders. </div>
+<li ><div class="li">Patroon handen van 2x vier tellen: draaibeweging met handen. De beweging lijkt op een “9”, draai hem van onderaf in met rustpunt op de drie van de eerste maat, daarna bovenlangs weer terug. Deze armbeweging gaat niet hoger dan de schouders. </div>
 </li>
 </ul>
 
@@ -42,29 +42,29 @@ Iedereen in 1 of meerdere lange slierten. Waar mannen en vrouwen in de rij staan
 <h4 class="sectionedit4" id="aanwijzingen">Aanwijzingen</h4>
 <div class="level4">
 <ul>
-<li class="level1"><div class="li">Bij de start van de uitleg: nog niet de handbeweging, maar de armen gewoon losjes naar beneden laten hangen</div>
+<li ><div class="li">Bij de start van de uitleg: nog niet de handbeweging, maar de armen gewoon losjes naar beneden laten hangen</div>
 </li>
-<li class="level1"><div class="li">Dames en heren, denk even na of er ringen om de ringvinger zitten die misschien danspartners pijn kunnen doen. Zo ja, even verplaatsen. Kleine moeite en echt heel erg veel meer dansplezier.</div>
+<li ><div class="li">Dames en heren, denk even na of er ringen om de ringvinger zitten die misschien danspartners pijn kunnen doen. Zo ja, even verplaatsen. Kleine moeite en echt heel erg veel meer dansplezier.</div>
 </li>
-<li class="level1"><div class="li">Niet te hard knijpen!</div>
+<li ><div class="li">Niet te hard knijpen!</div>
 </li>
-<li class="level1"><div class="li">Rustig in de swing van het liedje blijven.</div>
+<li ><div class="li">Rustig in de swing van het liedje blijven.</div>
 </li>
-<li class="level1"><div class="li">De eerste stap naar links een beetje nadruk en zwier geven</div>
+<li ><div class="li">De eerste stap naar links een beetje nadruk en zwier geven</div>
 </li>
-<li class="level1"><div class="li">Loop niet te hard, anders rekken de middelsten zo uit</div>
+<li ><div class="li">Loop niet te hard, anders rekken de middelsten zo uit</div>
 </li>
-<li class="level1"><div class="li">Ga niet naar rechts, voren of achteren, alleen naar links en op de plaats</div>
+<li ><div class="li">Ga niet naar rechts, voren of achteren, alleen naar links en op de plaats</div>
 </li>
-<li class="level1"><div class="li">Dit is van oorsprong een boerendans, dus op klompen. Probeer de voeten meer te schuiven in plaats van ze op te tillen</div>
+<li ><div class="li">Dit is van oorsprong een boerendans, dus op klompen. Probeer de voeten meer te schuiven in plaats van ze op te tillen</div>
 </li>
-<li class="level1"><div class="li">Wees stil, geniet van de kadans</div>
+<li ><div class="li">Wees stil, geniet van de kadans</div>
 </li>
-<li class="level1"><div class="li">Doe ogen dicht (maar niet als je de eerste van de rij bent!)</div>
+<li ><div class="li">Doe ogen dicht (maar niet als je de eerste van de rij bent!)</div>
 </li>
-<li class="level1"><div class="li">Wanneer de armen naar beneden gaan, deze ontspannen</div>
+<li ><div class="li">Wanneer de armen naar beneden gaan, deze ontspannen</div>
 </li>
-<li class="level1"><div class="li">Nog even over die pinken: de palm van je hand wijst omlaag. Je pink zit dan dus aan de “buitenkant” van je hand. </div>
+<li ><div class="li">Nog even over die pinken: de palm van je hand wijst omlaag. Je pink zit dan dus aan de “buitenkant” van je hand. </div>
 </li>
 </ul>
 
@@ -73,13 +73,13 @@ Iedereen in 1 of meerdere lange slierten. Waar mannen en vrouwen in de rij staan
 <h4 class="sectionedit5" id="variaties">Variaties</h4>
 <div class="level4">
 <ul>
-<li class="level1"><div class="li">Maak meer dan een sliert.</div>
+<li ><div class="li">Maak meer dan een sliert.</div>
 </li>
 <li class="level1 node"><div class="li">patronen door de leider:</div>
 <ul>
-<li class="level2"><div class="li">ga vaak weer vlak voor de heensliert weer terug zodat iedereen elkaar aan kan kijken.</div>
+<li ><div class="li">ga vaak weer vlak voor de heensliert weer terug zodat iedereen elkaar aan kan kijken.</div>
 </li>
-<li class="level2"><div class="li">ga voor de grap eens onder iemands a
+<li ><div class="li">ga voor de grap eens onder iemands a
 </div>
           </li></ul></li></ul></div>
         </div>
