--- a/source/web/dansen/bourree_d_auvergne.html
+++ b/source/web/dansen/bourree_d_auvergne.html
@@ -1,7 +1,7 @@
 
 </div><div class="dw-content">
 <h3 class="sectionedit1" id="bourree_d_auvergne">Bourrée d'Auvergne</h3>
-<div class="level3">
+<div >
 
 <p>
 De moeder van alle bourrées
@@ -28,7 +28,7 @@ Heer staat links, dame rechts van de heer. Rechterschouders naar elkaar; dame en
 </div>
 
 <h5 id="pas">Pas</h5>
-<div class="level5">
+<div >
 
 <p>
 Wisselpas met dien verstande dat de tweede pas op de bal van de voet gebeurt (ook kan: alleen de hiel). Onthoud: plat-bal-plat. Met welke voet men begint is niet vastgelegd.
@@ -37,7 +37,7 @@ Wisselpas met dien verstande dat de tweede pas op de bal van de voet gebeurt (oo
 </div>
 
 <h5 id="houding">Houding</h5>
-<div class="level5">
+<div >
 
 <p>
 De benen in lichte spreidstand, iets breder dan de heupen. Voeten licht uitgedraaid.
@@ -54,7 +54,7 @@ Belangrijk is dat er geen bounce optreedt. Hoofd blijft op één horizontale lij
 </div>
 
 <h5 id="richtingen">Richtingen</h5>
-<div class="level5">
+<div >
 
 <p>
 Er zijn 5 richtingen te doen met bovenstaande pas: Vooruit, achteruit, diagonaal, zijwaarts en draaien om eigen lichaams-as.
@@ -67,22 +67,22 @@ Altijd blijft de plat-bal-plat gehandhaafd. Dit kan lastig zijn bij met name de 
 </div>
 
 <h5 id="figuren">Figuren</h5>
-<div class="level5">
+<div >
 
 <p>
 Officieel is niets vastgelegd, maar als houvast kan de volgende volgorde dienen die op bals te doen gebruikelijk is:
 </p>
 <ul>
-<li class="level1"><div class="li">4 x banaan</div>
+<li ><div class="li">4 x banaan</div>
 </li>
-<li class="level1"><div class="li">4 x rond </div>
+<li ><div class="li">4 x rond </div>
 </li>
 </ul>
 
 </div>
 
 <h5 id="uitleg">Uitleg</h5>
-<div class="level5">
+<div >
 
 <p>
 <strong>Banaan</strong>
@@ -132,15 +132,15 @@ De “volger” spiegelt de lichaamshouding van de “leider”.
 Er zijn vijf richtingen:
 </p>
 <ul>
-<li class="level1"><div class="li">Frontaal</div>
+<li ><div class="li">Frontaal</div>
 </li>
-<li class="level1"><div class="li">Linkerschouders naar elkaar</div>
+<li ><div class="li">Linkerschouders naar elkaar</div>
 </li>
-<li class="level1"><div class="li">Rechterschouders naar elkaar</div>
+<li ><div class="li">Rechterschouders naar elkaar</div>
 </li>
-<li class="level1"><div class="li">Diagonaal links</div>
+<li ><div class="li">Diagonaal links</div>
 </li>
-<li class="level1"><div class="li">Diagonaal rechts </div>
+<li ><div class="li">Diagonaal rechts </div>
 </li>
 </ul>
 
@@ -197,13 +197,13 @@ Bij een vrijere dans kunnen bijvoorbeeld richtingsveranderingen en andere initia
 </div>
 
 <h3 class="sectionedit6" id="voorbeeld_muziekjes_en_filmpjes">Voorbeeld muziekjes en filmpjes</h3>
-<div class="level3">
+<div >
 <ul>
-<li class="level1"><div class="li">Bourrée 3t d'Auvergne instructie</div>
+<li ><div class="li">Bourrée 3t d'Auvergne instructie</div>
 </li>
 </ul>
 <iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/A186jBMs6sE" width="425"></iframe><ul>
-<li class="level1"><div class="li">Chemins de Traverse au bal folk de Bures-sur-Yvette le samedi 19 mai 2007 </div>
+<li ><div class="li">Chemins de Traverse au bal folk de Bures-sur-Yvette le samedi 19 mai 2007 </div>
 </li>
 </ul>
 <iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/NcIXw6u-65U" width="425"></iframe>
