--- a/source/web/dansen/bourree_du_berry_la_grande_potterie.html
+++ b/source/web/dansen/bourree_du_berry_la_grande_potterie.html
@@ -1,7 +1,7 @@
 
 </div><div class="dw-content">
 <h3 class="sectionedit1" id="la_grande_potterie">La grande potterie</h3>
-<div class="level3">
+<div >
 
 <p>
 De officiële titel is:
@@ -53,7 +53,7 @@ Aanwijzingen
 </div>
 
 <h3 class="sectionedit4" id="tips_voor_muzikanten">Tips voor muzikanten</h3>
-<div class="level3">
+<div >
 
 <p>
 Deze dans wordt in principe alleen op deze melodie uit de Berry gedanst.
@@ -62,9 +62,9 @@ Deze dans wordt in principe alleen op deze melodie uit de Berry gedanst.
 </div>
 
 <h3 class="sectionedit5" id="voorbeeld_muziekjes_en_filmpjes">Voorbeeld muziekjes en filmpjes</h3>
-<div class="level3">
+<div >
 <ul>
-<li class="level1"><div class="li">Matres &amp; P in Muiderpoort </div>
+<li ><div class="li">Matres &amp; P in Muiderpoort </div>
 </li>
 </ul>
 <iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/gO5p1dQX99A" width="425"></iframe>
