--- a/source/web/dansen/gavotte_des_montagnes.html
+++ b/source/web/dansen/gavotte_des_montagnes.html
@@ -1,7 +1,7 @@
 
 </div><div class="dw-content">
 <h3 class="sectionedit1" id="gavotte_des_montagnes">Gavotte des Montagnes</h3>
-<div class="level3">
+<div >
 
 <p>
 Snelle rijdans
@@ -40,9 +40,9 @@ Of gebruik dit als ezelsbruggetje: een, twee, in de maat, anders wordt de juffro
 </div>
 
 <h3 class="sectionedit4" id="voorbeeld_muziekjes_en_filmpjes">Voorbeeld muziekjes en filmpjes</h3>
-<div class="level3">
+<div >
 <ul>
-<li class="level1"><div class="li">Bert Leemans en Jeroen Geerinck </div>
+<li ><div class="li">Bert Leemans en Jeroen Geerinck </div>
 </li>
 </ul>
 <iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/ICEaGHf6a94" width="425"></iframe>
