--- a/source/web/dansen/hanter_dro_hanter-dro_klamm.html
+++ b/source/web/dansen/hanter_dro_hanter-dro_klamm.html
@@ -1,7 +1,7 @@
 
 </div><div class="dw-content">
 <h3 class="sectionedit1" id="hanter_dro_klamm">Hanter Dro Klamm</h3>
-<div class="level3">
+<div >
 
 <p>
 Een variant van de <a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕hanter_dro﹕hanter-dro_klamm.html" title="nl:dansen:hanter_dro">Hanter Dro</a>.
@@ -30,7 +30,7 @@ Een variant van de Hanter Dro waarbij je af en toe één tel helemaal stilstaat 
 <h4 class="sectionedit4" id="aanwijzingen">Aanwijzingen</h4>
 <div class="level4">
 <ul>
-<li class="level1"><div class="li">Je hoort deze “pauze” in de muziek (als het goed is …) en moet dus wat beter luisteren. </div>
+<li ><div class="li">Je hoort deze “pauze” in de muziek (als het goed is …) en moet dus wat beter luisteren. </div>
 </li>
 </ul>
 
@@ -39,14 +39,14 @@ Een variant van de Hanter Dro waarbij je af en toe één tel helemaal stilstaat 
 <h4 class="sectionedit5" id="variaties">Variaties</h4>
 <div class="level4">
 <ul>
-<li class="level1"><div class="li">Het is toegestaan om een brul te slaken (tekst suggestie: “Hee!”) op de pauze. </div>
+<li ><div class="li">Het is toegestaan om een brul te slaken (tekst suggestie: “Hee!”) op de pauze. </div>
 </li>
 </ul>
 
 </div>
 
 <h3 class="sectionedit6" id="voorbeeld_muziekjes_en_filmpjes">Voorbeeld muziekjes en filmpjes</h3>
-<div class="level3">
+<div >
 <iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/XyYs53rtXkY" width="425"></iframe>
 </div>
 
