--- a/source/web/dansen/laride.html
+++ b/source/web/dansen/laride.html
@@ -1,7 +1,7 @@
 
 </div><div class="dw-content">
 <h3 class="sectionedit1" id="laride">Laride</h3>
-<div class="level3">
+<div >
 
 <p>
 Er is nog geen omschrijving toegevoegd
@@ -24,46 +24,46 @@ In 1 of meerdere lange slierten.
 </div>
 
 <h5 id="voeten">Voeten</h5>
-<div class="level5">
+<div >
 <ol>
-<li class="level1"><div class="li">Stap naar links</div>
+<li ><div class="li">Stap naar links</div>
 </li>
-<li class="level1"><div class="li">Aansluitpas</div>
+<li ><div class="li">Aansluitpas</div>
 </li>
-<li class="level1"><div class="li">Stap naar links</div>
+<li ><div class="li">Stap naar links</div>
 </li>
-<li class="level1"><div class="li">Aansluitpas</div>
+<li ><div class="li">Aansluitpas</div>
 </li>
-<li class="level1"><div class="li">Op de tippen gaan staan</div>
+<li ><div class="li">Op de tippen gaan staan</div>
 </li>
-<li class="level1"><div class="li">Terug neerkomen</div>
+<li ><div class="li">Terug neerkomen</div>
 </li>
-<li class="level1"><div class="li">Op de tippen gaan staan, gewicht vooral op rechter voet</div>
+<li ><div class="li">Op de tippen gaan staan, gewicht vooral op rechter voet</div>
 </li>
-<li class="level1"><div class="li">Terug neerzetten, en linkervoet vrijmaken</div>
+<li ><div class="li">Terug neerzetten, en linkervoet vrijmaken</div>
 </li>
 </ol>
 
 </div>
 
 <h5 id="armen">Armen</h5>
-<div class="level5">
+<div >
 <ol>
-<li class="level1"><div class="li">Gestrekt naar voor, 45 graden</div>
+<li ><div class="li">Gestrekt naar voor, 45 graden</div>
 </li>
-<li class="level1"><div class="li">Terug neer, langs het lichaam</div>
+<li ><div class="li">Terug neer, langs het lichaam</div>
 </li>
-<li class="level1"><div class="li">Gestrekt naar voor, 45 graden</div>
+<li ><div class="li">Gestrekt naar voor, 45 graden</div>
 </li>
-<li class="level1"><div class="li">Voorarmen horizontaal, ellebogen naast het lichaam</div>
+<li ><div class="li">Voorarmen horizontaal, ellebogen naast het lichaam</div>
 </li>
-<li class="level1"><div class="li">Handen naar voor duwen, tot de armen gestrekt zijn.</div>
+<li ><div class="li">Handen naar voor duwen, tot de armen gestrekt zijn.</div>
 </li>
-<li class="level1"><div class="li">Voorarmen horizontaal, ellebogen naast het lichaam</div>
+<li ><div class="li">Voorarmen horizontaal, ellebogen naast het lichaam</div>
 </li>
-<li class="level1"><div class="li">Handen naar voor duwen, tot de armen gestrekt zijn.</div>
+<li ><div class="li">Handen naar voor duwen, tot de armen gestrekt zijn.</div>
 </li>
-<li class="level1"><div class="li">Armen neer, langs het lichaam</div>
+<li ><div class="li">Armen neer, langs het lichaam</div>
 </li>
 </ol>
 
@@ -79,13 +79,13 @@ Zie <a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕an_dro.
 </div>
 
 <h3 class="sectionedit5" id="voorbeeld_muziekjes_en_filmpjes">Voorbeeld muziekjes en filmpjes</h3>
-<div class="level3">
+<div >
 <ul>
-<li class="level1"><div class="li">Laridé 8 temps </div>
+<li ><div class="li">Laridé 8 temps </div>
 </li>
 </ul>
 <iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/4mZwUelKKw0" width="425"></iframe><ul>
-<li class="level1"><div class="li">Filmpje van Boombalfestival 2009 (muzikant onbekend) (opgenomen door Herman Horsten, <a class="urlextern" href="http://www.hermanhorsten.be/" rel="nofollow" title="http://www.hermanhorsten.be">www.hermanhorsten.be</a>):</div>
+<li ><div class="li">Filmpje van Boombalfestival 2009 (muzikant onbekend) (opgenomen door Herman Horsten, <a class="urlextern" href="http://www.hermanhorsten.be/" rel="nofollow" title="http://www.hermanhorsten.be">www.hermanhorsten.be</a>):</div>
 </li>
 </ul>
 <iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/aEqJLL9o60U" width="425"></iframe>
