--- a/source/web/dansen/polska_springlek.html
+++ b/source/web/dansen/polska_springlek.html
@@ -1,16 +1,11 @@
 <html><head></head><body><article class="container" id="dokuwiki__content">
 
 
-<div class="hidden-print panel panel-default" id="dw__pagetools">
-  <div class="tools">
-    <ul class="nav nav-stacked nav-pills">
-<li><a class="action text-muted backlink" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕polska﹕springlek.html" rel="nofollow" title="Referenties"><i class="fa fa-fw fa-link"></i><span class="sr-only"> Referenties</span></a></li><li class="plugin_move_page"><a href="javascript:void(0)" title="Hernoem Pagina"><i class="fa fa-fw fa-i-cursor text-muted"></i><span class="sr-only"> Hernoem Pagina</span></a></li>    </ul>
-  </div>
-</div>
+
 
 <div class="dw-content">
 <h1 class="sectionedit1" id="dit_onderwerp_bestaat_nog_niet">Dit onderwerp bestaat nog niet</h1>
-<div class="level1">
+<div >
 
 <p>
 De pagina over dit onderwerp bestaat nog niet. Aanmaken kan door op de <code>Maak deze pagina aan</code> te klikken.
