--- a/source/web/dansen/scottisch.html
+++ b/source/web/dansen/scottisch.html
@@ -1,7 +1,7 @@
 
 </div><div class="dw-content">
 <h3 class="sectionedit1" id="scottisch">Scottisch</h3>
-<div class="level3">
+<div >
 
 <p>
 Eenvoudige parendans met ontelbaar veel variaties
@@ -21,9 +21,9 @@ Gewoon in paren, half-open houding, over de dansvloer heen
 <h4 class="sectionedit3" id="basis">Basis</h4>
 <div class="level4">
 <ul>
-<li class="level1"><div class="li"><strong>A</strong>: 123-123-</div>
+<li ><div class="li"><strong>A</strong>: 123-123-</div>
 </li>
-<li class="level1"><div class="li"><strong>B</strong>: 1-2-3-4- </div>
+<li ><div class="li"><strong>B</strong>: 1-2-3-4- </div>
 </li>
 </ul>
 
@@ -34,44 +34,44 @@ Gewoon in paren, half-open houding, over de dansvloer heen
 <ul>
 <li class="level1 node"><div class="li">Draaien van de dame</div>
 <ul>
-<li class="level2"><div class="li">Een basisvariatie is op het B gedeelte de dame één, twee, drie of vier rondjes te lates draaien (vanuit de linkerhand van de heer).</div>
+<li ><div class="li">Een basisvariatie is op het B gedeelte de dame één, twee, drie of vier rondjes te lates draaien (vanuit de linkerhand van de heer).</div>
 </li>
-<li class="level2"><div class="li">Ook op het A gedeelte kunnen draaien worden gemaakt</div>
+<li ><div class="li">Ook op het A gedeelte kunnen draaien worden gemaakt</div>
 </li>
-<li class="level2"><div class="li">De heer kan bij de draai van de vrouw zijn rechterarm contact laten houden met de rug, en na de draai de dame de andere kant op terug laten draaien </div>
+<li ><div class="li">De heer kan bij de draai van de vrouw zijn rechterarm contact laten houden met de rug, en na de draai de dame de andere kant op terug laten draaien </div>
 </li>
 </ul>
 </li>
-<li class="level1"><div class="li">Omsluiten, elkaar los laten en in het A deel (dus 6 stappen) om een paar heen lopen (allebei een kant), B deel weer vrolijk samen verder dansen.</div>
+<li ><div class="li">Omsluiten, elkaar los laten en in het A deel (dus 6 stappen) om een paar heen lopen (allebei een kant), B deel weer vrolijk samen verder dansen.</div>
 </li>
-<li class="level1"><div class="li">Hele figuur zijwaarts: het tweede deel van A gaat dus binnendoor en deel B is een soort 'naast elkaar lopen', zo kan ook wat afstand worden afgelegd naar een rustig plekje op de dansvloer.</div>
+<li ><div class="li">Hele figuur zijwaarts: het tweede deel van A gaat dus binnendoor en deel B is een soort 'naast elkaar lopen', zo kan ook wat afstand worden afgelegd naar een rustig plekje op de dansvloer.</div>
 </li>
-<li class="level1"><div class="li">Op deel A uit elkaar gaan en gestrekte armen vastpakken en weer naar binnen gaan naar: danshouding, of handen vast voor het hart, of indraaien (dame onder de linkerarm van de heer door). Hier een tijdje in dansen, dan de dame met een kort rukje aan haar linkerarm uit laten draaien op deel B.</div>
+<li ><div class="li">Op deel A uit elkaar gaan en gestrekte armen vastpakken en weer naar binnen gaan naar: danshouding, of handen vast voor het hart, of indraaien (dame onder de linkerarm van de heer door). Hier een tijdje in dansen, dan de dame met een kort rukje aan haar linkerarm uit laten draaien op deel B.</div>
 </li>
-<li class="level1"><div class="li">openvouwen naar links (voor de heer) en omdraaien naar rechts (voor de heer) op deel A en op deel B hard ronddraaien met de armen van de heer om de schouders van de dame en de armen van de dame om de nek van de heer. Op deel A kan zo wat heen en weer gewiebeld worden (ellebogen horizontaal) en op deel B kunnen wel twee rondjes worden gedraaid. Om hier uit te komen laat de heer de dame twee rondjes alleen draaien en hij bukt zelf meteen onder de armen van de dame uit om haar voor deel A weer op te vangen. </div>
+<li ><div class="li">openvouwen naar links (voor de heer) en omdraaien naar rechts (voor de heer) op deel A en op deel B hard ronddraaien met de armen van de heer om de schouders van de dame en de armen van de dame om de nek van de heer. Op deel A kan zo wat heen en weer gewiebeld worden (ellebogen horizontaal) en op deel B kunnen wel twee rondjes worden gedraaid. Om hier uit te komen laat de heer de dame twee rondjes alleen draaien en hij bukt zelf meteen onder de armen van de dame uit om haar voor deel A weer op te vangen. </div>
 </li>
 </ul>
 
 </div>
 
 <h3 class="sectionedit5" id="voorbeeld_muziekjes_en_filmpjes">Voorbeeld muziekjes en filmpjes</h3>
-<div class="level3">
+<div >
 <ul>
-<li class="level1"><div class="li">Bladmuziek <a class="urlextern" href="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/276" rel="nofollow" title="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/276">Le Canal en Octobre</a>:   </div>
+<li ><div class="li">Bladmuziek <a class="urlextern" href="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/276" rel="nofollow" title="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/276">Le Canal en Octobre</a>:   </div>
 </li>
-<li class="level1"><div class="li">Opname <a class="urlextern" href="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/276" rel="nofollow" title="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/276">Le Canal en Octobre</a>: </div>
+<li ><div class="li">Opname <a class="urlextern" href="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/276" rel="nofollow" title="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/276">Le Canal en Octobre</a>: </div>
 </li>
 </ul>
 <ul>
-<li class="level1"><div class="li">Scottish instructie</div>
+<li ><div class="li">Scottish instructie</div>
 </li>
 </ul>
 <iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/y1mfTqRCfyg" width="425"></iframe><ul>
-<li class="level1"><div class="li">Wen en Cryssie </div>
+<li ><div class="li">Wen en Cryssie </div>
 </li>
 </ul>
 <iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/aZZTY6soclM" width="425"></iframe><ul>
-<li class="level1"><div class="li">Chananja en Cecilia </div>
+<li ><div class="li">Chananja en Cecilia </div>
 </li>
 </ul>
 <iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/nr-1u0VwLRU" width="425"></iframe>
@@ -82,15 +82,15 @@ Gewoon in paren, half-open houding, over de dansvloer heen
 </div>
 
 <h3 class="sectionedit6" id="externe_pagina_s">Externe Pagina's</h3>
-<div class="level3">
+<div >
 <ul>
-<li class="level1"><div class="li"><a class="urlextern" href="" rel="nofollow" title="http://www.folkforum.nl/content/view/2095/158/">Basisuitleg op folkforum, door Cooper</a></div>
+<li ><div class="li"><a class="urlextern" href="" rel="nofollow" title="http://www.folkforum.nl/content/view/2095/158/">Basisuitleg op folkforum, door Cooper</a></div>
 </li>
-<li class="level1"><div class="li"><a class="urlextern" href="BFdances.html#scottish" rel="nofollow" title="http://celticbompa.4t.com/BFdances.html#scottish">Celtic Bompa Scottish</a></div>
+<li ><div class="li"><a class="urlextern" href="BFdances.html#scottish" rel="nofollow" title="http://celticbompa.4t.com/BFdances.html#scottish">Celtic Bompa Scottish</a></div>
 </li>
-<li class="level1"><div class="li"><a class="urlextern" href="Wattrelos20040131.html#scottish" rel="nofollow" title="http://celticbompa.4t.com/Wattrelos20040131.html#scottish">Celtic Bompa workshop door Bernard Coclet aantekeningen</a></div>
+<li ><div class="li"><a class="urlextern" href="Wattrelos20040131.html#scottish" rel="nofollow" title="http://celticbompa.4t.com/Wattrelos20040131.html#scottish">Celtic Bompa workshop door Bernard Coclet aantekeningen</a></div>
 </li>
-<li class="level1"><div class="li"><a class="urlextern" href="http://www.folkroddels.be/artikels/1770.html" rel="nofollow" title="http://www.folkroddels.be/artikels/1770.html">Folkroddels.be: Scottish voor fijnproevers</a></div>
+<li ><div class="li"><a class="urlextern" href="http://www.folkroddels.be/artikels/1770.html" rel="nofollow" title="http://www.folkroddels.be/artikels/1770.html">Folkroddels.be: Scottish voor fijnproevers</a></div>
 </li>
 </ul>
 
