--- a/source/web/dansen/tarantella.html
+++ b/source/web/dansen/tarantella.html
@@ -1,7 +1,7 @@
 
 </div><div class="dw-content">
 <h3 class="sectionedit1" id="tarantella">Tarantella</h3>
-<div class="level3">
+<div >
 
 <p>
 De Tarantella is een leuk pseudo-Italiaans dansje — het is binnen balfolk sterk gechoreografeerd en daarom niet te vergelijken met de oorspronkelijke Italiaanse improvisatiedans. Het kan zijn dat de dans zijn naam dankt aan de Italiaanse stad Tarente, maar het verhaal gaat ook dat de naam afstamt van de Tarantula spin. Het zou een dans zijn tegen het spinnengif en de Tarantella moet daarom ook fel gespeeld en gedanst worden: het spinnengif moet eruit gezweet!
@@ -25,80 +25,80 @@ In koppels tegenover elkaar dwars op de kringlijn; in balfolk vaak gewoon in kop
 Dans in vier delen van telkens 16 maten.
 </p>
 <ul>
-<li class="level1"><div class="li"><strong>deel 1</strong>: sprong en swing</div>
+<li ><div class="li"><strong>deel 1</strong>: sprong en swing</div>
 </li>
 <li class="level1 node"><div class="li"></div>
 <ul>
-<li class="level2"><div class="li"><strong>maat 1-4 (of A-deel melodie 1)</strong></div>
+<li ><div class="li"><strong>maat 1-4 (of A-deel melodie 1)</strong></div>
 </li>
-<li class="level2"><div class="li">Set-pas met rechts, met je linkerhand neem je een imaginaire hoed af naar links. Zelfde met links. Herhaal. </div>
+<li ><div class="li">Set-pas met rechts, met je linkerhand neem je een imaginaire hoed af naar links. Zelfde met links. Herhaal. </div>
 </li>
-<li class="level2"><div class="li"><strong>maat 5-8 (of B-deel melodie 1)</strong></div>
+<li ><div class="li"><strong>maat 5-8 (of B-deel melodie 1)</strong></div>
 </li>
 </ul>
 </li>
 <li class="level1 node"><div class="li">Swing rond, met rechterarm rond elkaars middel en linkerarm hoog gestrekt. </div>
 <ul>
-<li class="level2"><div class="li"><strong>maat 9-12 (of A-deel melodie 1)</strong></div>
+<li ><div class="li"><strong>maat 9-12 (of A-deel melodie 1)</strong></div>
 </li>
-<li class="level2"><div class="li">Herhaling 1-4. </div>
+<li ><div class="li">Herhaling 1-4. </div>
 </li>
-<li class="level2"><div class="li"><strong>maat 13-16 (of B-deel melodie 1)</strong></div>
+<li ><div class="li"><strong>maat 13-16 (of B-deel melodie 1)</strong></div>
 </li>
-<li class="level2"><div class="li">Herhaling 5-8. </div>
-</li>
-</ul>
+<li ><div class="li">Herhaling 5-8. </div>
 </li>
 </ul>
-<ul>
-<li class="level1"><div class="li"><strong>deel 2: knieval en draai</strong></div>
 </li>
 </ul>
 <ul>
-<li class="level1"><div class="li"><strong>maat 1-4 (of A-deel melodie 2)</strong></div>
-</li>
-<li class="level2"><div class="li">Heer valt op de linkerknie voor zijn dame en leidt haar <strong>linksom</strong> rond hem. Dame in Schotse pas rond *</div>
-</li>
-<li class="level2"><div class="li"><strong>maat 5-8 (of B-deel melodie 2)</strong></div>
-</li>
-<li class="level2"><div class="li"><strong>naast elkaar</strong>, binnenhanden vast, stap-kick met buitenvoet, idem met binnenvoet;</div>
-</li>
-<li class="level2"><div class="li">individueel hele draai rond buitenom </div>
-</li>
-<li class="level2"><div class="li"><strong>maat 9-12 (of A-deel melodie 2)</strong></div>
-</li>
-<li class="level2"><div class="li">Herhaling maat 1-4 </div>
-</li>
-<li class="level2"><div class="li"><strong>maat 13-16 (of A-deel melodie 2)</strong></div>
-</li>
-<li class="level2"><div class="li">herhaal maat 5-8 </div>
+<li ><div class="li"><strong>deel 2: knieval en draai</strong></div>
 </li>
 </ul>
 <ul>
-<li class="level1"><div class="li"><strong>deel 3: handenklap en dos à dos</strong></div>
+<li ><div class="li"><strong>maat 1-4 (of A-deel melodie 2)</strong></div>
+</li>
+<li ><div class="li">Heer valt op de linkerknie voor zijn dame en leidt haar <strong>linksom</strong> rond hem. Dame in Schotse pas rond *</div>
+</li>
+<li ><div class="li"><strong>maat 5-8 (of B-deel melodie 2)</strong></div>
+</li>
+<li ><div class="li"><strong>naast elkaar</strong>, binnenhanden vast, stap-kick met buitenvoet, idem met binnenvoet;</div>
+</li>
+<li ><div class="li">individueel hele draai rond buitenom </div>
+</li>
+<li ><div class="li"><strong>maat 9-12 (of A-deel melodie 2)</strong></div>
+</li>
+<li ><div class="li">Herhaling maat 1-4 </div>
+</li>
+<li ><div class="li"><strong>maat 13-16 (of A-deel melodie 2)</strong></div>
+</li>
+<li ><div class="li">herhaal maat 5-8 </div>
 </li>
 </ul>
 <ul>
-<li class="level1"><div class="li"><strong>maat 1-4</strong></div>
-</li>
-<li class="level2"><div class="li">Schuin naar elkaar toelopen, tot je naast elkaar staat. Daarna achterwaarts weer naar je plaats. Naar elkaar toe ga je van laag naar hoog en klapt op elke tel. Van elkaar weg van hoog naar laag. Laatste klap is achter de rug.</div>
-</li>
-<li class="level2"><div class="li"><strong>maat 5-8</strong></div>
+<li ><div class="li"><strong>deel 3: handenklap en dos à dos</strong></div>
 </li>
 </ul>
 <ul>
-<li class="level1"><div class="li">dos à dos rond elkaar rechtsom, terwijl je om je eigen as linksom draait, ondertussen met de bovenarmen rondjes maken. </div>
+<li ><div class="li"><strong>maat 1-4</strong></div>
+</li>
+<li ><div class="li">Schuin naar elkaar toelopen, tot je naast elkaar staat. Daarna achterwaarts weer naar je plaats. Naar elkaar toe ga je van laag naar hoog en klapt op elke tel. Van elkaar weg van hoog naar laag. Laatste klap is achter de rug.</div>
+</li>
+<li ><div class="li"><strong>maat 5-8</strong></div>
 </li>
 </ul>
 <ul>
-<li class="level1"><div class="li"><strong>deel 4: polka </strong></div>
+<li ><div class="li">dos à dos rond elkaar rechtsom, terwijl je om je eigen as linksom draait, ondertussen met de bovenarmen rondjes maken. </div>
+</li>
+</ul>
+<ul>
+<li ><div class="li"><strong>deel 4: polka </strong></div>
 </li>
 </ul>
 
 </div>
 
 <h3 class="sectionedit4" id="tips_voor_muzikanten">Tips voor muzikanten</h3>
-<div class="level3">
+<div >
 
 <p>
 Speel de muziek vlot en fel en zorg waar de dans dit nodig heeft voor een fijne swing feel.
@@ -107,11 +107,11 @@ Speel de muziek vlot en fel en zorg waar de dans dit nodig heeft voor een fijne 
 </div>
 
 <h3 class="sectionedit5" id="voorbeeld_muziekjes_en_filmpjes">Voorbeeld muziekjes en filmpjes</h3>
-<div class="level3">
+<div >
 <ul>
-<li class="level1"><div class="li">Bladmuziek <a class="urlextern" href="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/90" rel="nofollow" title="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/90">Cicerenella</a>:</div>
+<li ><div class="li">Bladmuziek <a class="urlextern" href="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/90" rel="nofollow" title="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/90">Cicerenella</a>:</div>
 </li>
-<li class="level1"><div class="li">Opname <a class="urlextern" href="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/90" rel="nofollow" title="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/90">Cicerenella</a>: </div>
+<li ><div class="li">Opname <a class="urlextern" href="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/90" rel="nofollow" title="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/90">Cicerenella</a>: </div>
 </li>
 </ul>
 
