--- a/source/web/dansen/tricot.html
+++ b/source/web/dansen/tricot.html
@@ -5,7 +5,7 @@
 
 <div class="dw-content">
 <h3 class="sectionedit1" id="tricot">TRICOT</h3>
-<div class="level3">
+<div >
 
 <p>
 Een “tricot” is elke combinatie van een Hanter-Dro en een An Dro.
