--- a/source/web/dansen/wals/wals.html
+++ b/source/web/dansen/wals/wals.html
@@ -20,13 +20,13 @@ Je staat in half-open houding, ergens op de dansvloer. De paren die snel willen 
 <h4 class="sectionedit2" id="basis">Basis</h4>
 <div class="level4">
 <ul>
-<li class="level1"><div class="li">De vrouw spiegelt de man, dus een pas met links is voor de vrouw een pas met rechts.</div>
+<li ><div class="li">De vrouw spiegelt de man, dus een pas met links is voor de vrouw een pas met rechts.</div>
 </li>
-<li class="level1"><div class="li">De eerste maat is links rechts links waarbij het zwaartepunt van het lichaam de hele maat boven het linker been blijft.</div>
+<li ><div class="li">De eerste maat is links rechts links waarbij het zwaartepunt van het lichaam de hele maat boven het linker been blijft.</div>
 </li>
-<li class="level1"><div class="li">De tweede maat is rechts links rechts waarbij het zwaartepunt van het lichaam de hele maat boven het rechter been blijft.</div>
+<li ><div class="li">De tweede maat is rechts links rechts waarbij het zwaartepunt van het lichaam de hele maat boven het rechter been blijft.</div>
 </li>
-<li class="level1"><div class="li">Voor de absolute basis is het prima als deze passen op de plaats worden gezet, als het gewicht per maat maar echt wordt verplaatst. </div>
+<li ><div class="li">Voor de absolute basis is het prima als deze passen op de plaats worden gezet, als het gewicht per maat maar echt wordt verplaatst. </div>
 </li>
 </ul>
 
@@ -35,17 +35,17 @@ Je staat in half-open houding, ergens op de dansvloer. De paren die snel willen 
 <h4 class="sectionedit3" id="aanwijzingen">Aanwijzingen</h4>
 <div class="level4">
 <ul>
-<li class="level1"><div class="li">Er kunnen rondjes met de klok mee gedraaid worden. Dit kan gewoon heel rustig gebeuren.</div>
+<li ><div class="li">Er kunnen rondjes met de klok mee gedraaid worden. Dit kan gewoon heel rustig gebeuren.</div>
 </li>
 <li class="level1 node"><div class="li">Het is ook mogelijk om per maat een halve draai te maken.</div>
 <ul>
-<li class="level2"><div class="li">De eerste maat zet de man het linkerbeen echt om het rechterbeen van de vrouw heen, om de eerste halve draai goed te maken. De tweede maat zet de vrouw haar rechterbeen echt om het linkerbeen van de man heen, en zet deze draai dus in. Je eindigt met de vrouw aan de binnenkant, de heer aan de buitenkant.</div>
+<li ><div class="li">De eerste maat zet de man het linkerbeen echt om het rechterbeen van de vrouw heen, om de eerste halve draai goed te maken. De tweede maat zet de vrouw haar rechterbeen echt om het linkerbeen van de man heen, en zet deze draai dus in. Je eindigt met de vrouw aan de binnenkant, de heer aan de buitenkant.</div>
 </li>
-<li class="level2"><div class="li">Na twee maten ben je dan helemaal rond en kun je weer opnieuw verder. Je staan nu weer met de heer aan de binnenkant, vrouw aan de buitenkant. </div>
+<li ><div class="li">Na twee maten ben je dan helemaal rond en kun je weer opnieuw verder. Je staan nu weer met de heer aan de binnenkant, vrouw aan de buitenkant. </div>
 </li>
 </ul>
 </li>
-<li class="level1"><div class="li">Als je nog niet als een gek rondjes draait in de dansrichting, verplaats je dan naar het midden van de vloer. Doe dit ook als je rare figuren wil doen waardoor je even stil komt te staan </div>
+<li ><div class="li">Als je nog niet als een gek rondjes draait in de dansrichting, verplaats je dan naar het midden van de vloer. Doe dit ook als je rare figuren wil doen waardoor je even stil komt te staan </div>
 </li>
 </ul>
 
@@ -54,51 +54,51 @@ Je staat in half-open houding, ergens op de dansvloer. De paren die snel willen 
 <h4 class="sectionedit4" id="variaties">Variaties</h4>
 <div class="level4">
 <ul>
-<li class="level1"><div class="li"><a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕wals﹕wals_in_5_tijden.html" title="nl:dansen:wals:wals_in_5_tijden">Wals in 5 tijden</a></div>
+<li ><div class="li"><a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕wals﹕wals_in_5_tijden.html" title="nl:dansen:wals:wals_in_5_tijden">Wals in 5 tijden</a></div>
 </li>
-<li class="level1"><div class="li"><a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕wals﹕wals_in_7_tijden.html" title="nl:dansen:wals:wals_in_7_tijden">Wals in 7 tijden</a></div>
+<li ><div class="li"><a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕wals﹕wals_in_7_tijden.html" title="nl:dansen:wals:wals_in_7_tijden">Wals in 7 tijden</a></div>
 </li>
-<li class="level1"><div class="li"><a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕wals﹕wals_in_8_tijden.html" title="nl:dansen:wals:wals_in_8_tijden">Wals in 8 tijden</a></div>
+<li ><div class="li"><a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕wals﹕wals_in_8_tijden.html" title="nl:dansen:wals:wals_in_8_tijden">Wals in 8 tijden</a></div>
 </li>
-<li class="level1"><div class="li"><a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕wals﹕wals_in_11_tijden.html" title="nl:dansen:wals:wals_in_11_tijden">Wals in 11 tijden</a></div>
+<li ><div class="li"><a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕wals﹕wals_in_11_tijden.html" title="nl:dansen:wals:wals_in_11_tijden">Wals in 11 tijden</a></div>
 </li>
-<li class="level1"><div class="li"><a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕wals﹕wals_in_14_tijden.html" title="nl:dansen:wals:wals_in_14_tijden">Wals in 14 tijden</a></div>
+<li ><div class="li"><a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕wals﹕wals_in_14_tijden.html" title="nl:dansen:wals:wals_in_14_tijden">Wals in 14 tijden</a></div>
 </li>
 </ul>
 
 </div>
 
 <h3 class="sectionedit5" id="voorbeeld_muziekjes_en_filmpjes">Voorbeeld muziekjes en filmpjes</h3>
-<div class="level3">
+<div >
 <ul>
 
 
 </ul>
 <iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/honwsw_O-W" width="425"></iframe><ul>
-<li class="level1"><div class="li">Depardu (Eric Theze en Wouter Vandenabeele)</div>
+<li ><div class="li">Depardu (Eric Theze en Wouter Vandenabeele)</div>
 </li>
 </ul>
 <iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/1MWgBDObNgg" width="425"></iframe><ul>
-<li class="level1"><div class="li">Wals in 3</div>
+<li ><div class="li">Wals in 3</div>
 </li>
 </ul>
 <iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/hBnAgW9KOqg" width="425"></iframe><ul>
-<li class="level1"><div class="li">Ander soort wals (choreografie?) met een Fransman die laatst ook in muiderpoort was</div>
+<li ><div class="li">Ander soort wals (choreografie?) met een Fransman die laatst ook in muiderpoort was</div>
 </li>
 </ul>
 <iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/LeuklHmIhMU" width="425"></iframe><ul>
-<li class="level1"><div class="li">Filmpje van een workshop: Bal de l'Europe 2008 “LA VALSE des BRAS” </div>
+<li ><div class="li">Filmpje van een workshop: Bal de l'Europe 2008 “LA VALSE des BRAS” </div>
 </li>
 </ul>
 <iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/QN8XqDbfbps" width="425"></iframe>
 </div>
 
 <h3 class="sectionedit6" id="externe_pagina_s">Externe Pagina's</h3>
-<div class="level3">
+<div >
 <ul>
-<li class="level1"><div class="li"><a class="urlextern" href="BFdances.html#5stepwaltz" rel="nofollow" title="http://celticbompa.4t.com/BFdances.html#5stepwaltz">Celtic Bompa 5-Step Waltz</a></div>
+<li ><div class="li"><a class="urlextern" href="BFdances.html#5stepwaltz" rel="nofollow" title="http://celticbompa.4t.com/BFdances.html#5stepwaltz">Celtic Bompa 5-Step Waltz</a></div>
 </li>
-<li class="level1"><div class="li"><a class="urlextern" href="Zwiebo.html#zwiefacher" rel="nofollow" title="http://celticbompa.4t.com/Zwiebo.html#zwiefacher">Celtic Bompa aantekeningen zwiefacher workshop</a></div>
+<li ><div class="li"><a class="urlextern" href="Zwiebo.html#zwiefacher" rel="nofollow" title="http://celticbompa.4t.com/Zwiebo.html#zwiefacher">Celtic Bompa aantekeningen zwiefacher workshop</a></div>
 </li>
 </ul>
 
