--- a/source/web/dansen/wals/wals_in_11_tijden.html
+++ b/source/web/dansen/wals/wals_in_11_tijden.html
@@ -1,16 +1,11 @@
 <html><head></head><body><article class="container" id="dokuwiki__content">
 
 
-<div class="hidden-print panel panel-default" id="dw__pagetools">
-  <div class="tools">
-    <ul class="nav nav-stacked nav-pills">
-<li><a class="action text-muted backlink" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕wals﹕wals_in_11_tijden.html" rel="nofollow" title="Referenties"><i class="fa fa-fw fa-link"></i><span class="sr-only"> Referenties</span></a></li><li class="plugin_move_page"><a href="javascript:void(0)" title="Hernoem Pagina"><i class="fa fa-fw fa-i-cursor text-muted"></i><span class="sr-only"> Hernoem Pagina</span></a></li>    </ul>
-  </div>
-</div>
+
 
 <div class="dw-content">
 <h3 class="sectionedit1" id="wals_in_11_tijden">Wals in 11 tijden</h3>
-<div class="level3">
+<div >
 
 <p>
 De wals in 11 heeft net als alle onregelmatige walsen een tussenpas. Waar de walspas drie tellen bestrijkt, heeft de tussenpas er twee. Het is afhankelijk van de muziek wanneer deze tussenpas valt; meestal is het erg duidelijk te horen.
