--- a/source/web/dansen/wals/wals_in_14_tijden.html
+++ b/source/web/dansen/wals/wals_in_14_tijden.html
@@ -5,7 +5,7 @@
 
 <div class="dw-content">
 <h3 class="sectionedit1" id="wals_in_14_tijden">Wals in 14 tijden</h3>
-<div class="level3">
+<div >
 
 <p>
 Komt in het wild niet voor.
@@ -20,9 +20,9 @@ Komt in het wild niet voor.
 2 Walsen in 14 tijden (32333) door Eric Theze:
 </p>
 <ul>
-<li class="level1"><div class="li"><a class="urlextern" href="http://eric.theze.free.fr/musiques/vevy14tps.mp3" rel="nofollow" title="http://eric.theze.free.fr/musiques/vevy14tps.mp3">Vévy</a></div>
+<li ><div class="li"><a class="urlextern" href="http://eric.theze.free.fr/musiques/vevy14tps.mp3" rel="nofollow" title="http://eric.theze.free.fr/musiques/vevy14tps.mp3">Vévy</a></div>
 </li>
-<li class="level1"><div class="li"><a class="urlextern" href="http://eric.theze.free.fr/musiques/dessinslydia.mp3" rel="nofollow" title="http://eric.theze.free.fr/musiques/dessinslydia.mp3">Dessins</a></div>
+<li ><div class="li"><a class="urlextern" href="http://eric.theze.free.fr/musiques/dessinslydia.mp3" rel="nofollow" title="http://eric.theze.free.fr/musiques/dessinslydia.mp3">Dessins</a></div>
 </li>
 </ul>
 
