--- a/source/web/events/boombalstage.html
+++ b/source/web/events/boombalstage.html
@@ -1,7 +1,7 @@
 
 </div><div class="dw-content">
 <h3 class="sectionedit1" id="boombal_stage">Boombal Stage</h3>
-<div class="level3">
+<div >
 
 <p>
 De Boombal stage wordt ieder jaar georganiseerd voor het <a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕event﹕boombalfestival.html" title="nl:event:boombalfestival">Boombal festival</a>. Tijdens deze stage wordt er in 3 niveaus les gegeven in balfolk.
@@ -10,9 +10,9 @@ De Boombal stage wordt ieder jaar georganiseerd voor het <a class="wikilink1" hr
 </div>
 
 <h3 class="sectionedit2" id="externe_pagina_s">Externe Pagina's</h3>
-<div class="level3">
+<div >
 <ul>
-<li class="level1"><div class="li"><a class="urlextern" href="http://www.boombalfestival.be/stage/" rel="nofollow" title="http://www.boombalfestival.be/stage/">Officiële website</a></div>
+<li ><div class="li"><a class="urlextern" href="http://www.boombalfestival.be/stage/" rel="nofollow" title="http://www.boombalfestival.be/stage/">Officiële website</a></div>
 </li>
 </ul>
 
