--- a/source/web/events/castlefest.html
+++ b/source/web/events/castlefest.html
@@ -1,7 +1,7 @@
 
 </div><div class="dw-content">
 <h3 class="sectionedit1" id="castlefest">Castlefest</h3>
-<div class="level3">
+<div >
 
 <p>
 Castlefest is een middeleeuws en fantasyfestival, dat sinds 2005 ieder jaar begin augustus wordt gehouden in de tuinen van Kasteel Keukenhof in Lisse in Nederland. Het festival duurt drie dagen, plus (sinds 2011) een openingsconcert op de donderdag voorafgaand aan het festival. Bij de eerste editie kwamen 3.500 mensen naar het evenement. Editie 2007 trok al 16.000 bezoekers en in 2011 mocht Castlefest ruim 24.000 bezoekers verwelkomen. In 2015 werd het recordaantal van 35.000 bezoekers behaald<sup><a class="refnotes-ref note-popup" href="#refnotes:1:note1" name="refnotes:1:ref1">1)</a></sup>.
@@ -14,9 +14,9 @@ Voor meer info, zie de <a class="urlextern" href="https://nl.wikipedia.org/wiki/
 </div>
 
 <h3 class="sectionedit2" id="externe_pagina_s">Externe Pagina's</h3>
-<div class="level3">
+<div >
 <ul>
-<li class="level1"><div class="li"><a class="urlextern" href="http://www.castlefest.nl/" rel="nofollow" title="http://www.castlefest.nl/">Officiële website</a></div>
+<li ><div class="li"><a class="urlextern" href="http://www.castlefest.nl/" rel="nofollow" title="http://www.castlefest.nl/">Officiële website</a></div>
 </li>
 </ul>
 
