--- a/source/web/dansen/horo.html
+++ b/source/web/dansen/horo.html
@@ -1,7 +1,7 @@
 
 </div><div class="dw-content">
 <h3 class="sectionedit1" id="horo">Horo</h3>
-<div class="level3">
+<div >
 
 <p>
 Dit is een tamelijk snelle dans.
@@ -21,13 +21,13 @@ Iedereen in 1 of meerdere cirkels of rijen.
 <h4 class="sectionedit3" id="basis">Basis</h4>
 <div class="level4">
 <ul>
-<li class="level1"><div class="li">Kruisstap naar rechts met de linkervoet </div>
+<li ><div class="li">Kruisstap naar rechts met de linkervoet </div>
 </li>
-<li class="level1"><div class="li">Stap naar rechts met de rechtervoet </div>
+<li ><div class="li">Stap naar rechts met de rechtervoet </div>
 </li>
-<li class="level1"><div class="li">Schop naar rechts met de linkervoet </div>
+<li ><div class="li">Schop naar rechts met de linkervoet </div>
 </li>
-<li class="level1"><div class="li">Schop naar links met de rechtervoet </div>
+<li ><div class="li">Schop naar links met de rechtervoet </div>
 </li>
 </ul>
 
