--- a/source/web/dansen/jig.html
+++ b/source/web/dansen/jig.html
@@ -1,7 +1,7 @@
 
 </div><div class="dw-content">
 <h3 class="sectionedit1" id="jig">Jig</h3>
-<div class="level3">
+<div >
 
 <p>
 Gezellige mixer. In Frankrijk chapeloise genoemd en in Engeland gigue.
@@ -44,22 +44,22 @@ Rechterhand heer en linkerhand dame zijn vast, hand van heer is onder)
 </div>
 
 <h5 id="a">A</h5>
-<div class="level5">
+<div >
 <ul>
-<li class="level1"><div class="li"><strong>I:</strong> vooruitlopen 4 passen - draai om (linkerhand heer is nu vast met rechterhand dame) en ga achteruit  door 4 passen (nog steeds tegen de klok in).</div>
+<li ><div class="li"><strong>I:</strong> vooruitlopen 4 passen - draai om (linkerhand heer is nu vast met rechterhand dame) en ga achteruit  door 4 passen (nog steeds tegen de klok in).</div>
 </li>
-<li class="level1"><div class="li"><strong>II:</strong> vooruit teruglopen 4 passen - draai om en ga achteruit door 4 passen (met de klok mee) </div>
+<li ><div class="li"><strong>II:</strong> vooruit teruglopen 4 passen - draai om en ga achteruit door 4 passen (met de klok mee) </div>
 </li>
 </ul>
 
 </div>
 
 <h5 id="b">B</h5>
-<div class="level5">
+<div >
 <ul>
-<li class="level1"><div class="li"><strong>III:</strong> Set-pas (driepas) naar elkaar toe - idem uit elkaar - in looppassen van plaats wisselen</div>
+<li ><div class="li"><strong>III:</strong> Set-pas (driepas) naar elkaar toe - idem uit elkaar - in looppassen van plaats wisselen</div>
 </li>
-<li class="level1"><div class="li"><strong>IV:</strong> Set-pas naar elkaar toe - idem uit elkaar- draai door (heren laten de dames onder hun linkerarm door naar achter gaan, door met de linkerhand een hoge poort te maken en naar links te bewegen zodat de dame schuin rechts naar achteren begeleid wordt, terwijl ze zelf schuin links naar voren stappen om de nieuwe dame op te vangen aan hun rechterhand die van voren eraan komt)</div>
+<li ><div class="li"><strong>IV:</strong> Set-pas naar elkaar toe - idem uit elkaar- draai door (heren laten de dames onder hun linkerarm door naar achter gaan, door met de linkerhand een hoge poort te maken en naar links te bewegen zodat de dame schuin rechts naar achteren begeleid wordt, terwijl ze zelf schuin links naar voren stappen om de nieuwe dame op te vangen aan hun rechterhand die van voren eraan komt)</div>
 </li>
 </ul>
 
@@ -68,19 +68,19 @@ Rechterhand heer en linkerhand dame zijn vast, hand van heer is onder)
 <h4 class="sectionedit4" id="aanwijzingen">Aanwijzingen</h4>
 <div class="level4">
 <ul>
-<li class="level1"><div class="li">kijk je partner aan!</div>
+<li ><div class="li">kijk je partner aan!</div>
 </li>
-<li class="level1"><div class="li">dame legt de hand op die van de heer</div>
+<li ><div class="li">dame legt de hand op die van de heer</div>
 </li>
-<li class="level1"><div class="li">evt: vrije hand in je zij zetten</div>
+<li ><div class="li">evt: vrije hand in je zij zetten</div>
 </li>
-<li class="level1"><div class="li">beetje rechtop staan :)</div>
+<li ><div class="li">beetje rechtop staan :)</div>
 </li>
-<li class="level1"><div class="li">houdt rekening met looptempo voor en achter je</div>
+<li ><div class="li">houdt rekening met looptempo voor en achter je</div>
 </li>
-<li class="level1"><div class="li">als het krap is: spring in deel B niet te wild</div>
+<li ><div class="li">als het krap is: spring in deel B niet te wild</div>
 </li>
-<li class="level1"><div class="li">loop in deel A niet te dicht tegen elkaar aan, want dan kan je niet naar elkaar toe springen </div>
+<li ><div class="li">loop in deel A niet te dicht tegen elkaar aan, want dan kan je niet naar elkaar toe springen </div>
 </li>
 </ul>
 
@@ -89,57 +89,57 @@ Rechterhand heer en linkerhand dame zijn vast, hand van heer is onder)
 <h4 class="sectionedit5" id="variaties">Variaties</h4>
 <div class="level4">
 <ul>
-<li class="level1"><div class="li">In deel A 8 tellen rechtdoor lopen gezicht zelfde kant op</div>
+<li ><div class="li">In deel A 8 tellen rechtdoor lopen gezicht zelfde kant op</div>
 </li>
-<li class="level1"><div class="li">aan einde van I, II, III en/of IV kan de man de vrouw één of meer extra rondjes laten draaien</div>
+<li ><div class="li">aan einde van I, II, III en/of IV kan de man de vrouw één of meer extra rondjes laten draaien</div>
 </li>
-<li class="level1"><div class="li">In deel B met de voeten vooruit en de benen wat gestrekt springen, er een iers aandoend huppeltje van maken.</div>
+<li ><div class="li">In deel B met de voeten vooruit en de benen wat gestrekt springen, er een iers aandoend huppeltje van maken.</div>
 </li>
-<li class="level1"><div class="li">Bij naar elkaar toe springen kwartslag gedraaid zijn naar elkaar toe.</div>
+<li ><div class="li">Bij naar elkaar toe springen kwartslag gedraaid zijn naar elkaar toe.</div>
 </li>
-<li class="level1"><div class="li">Halverweg I draait de heer de dame met één of twee handen een hele slag in en ze lopen nog steeds vooruit en bij het eerste deel van B achteruit. In het tweede deel van b volgt een draai 'uit'. </div>
+<li ><div class="li">Halverweg I draait de heer de dame met één of twee handen een hele slag in en ze lopen nog steeds vooruit en bij het eerste deel van B achteruit. In het tweede deel van b volgt een draai 'uit'. </div>
 </li>
 </ul>
 
 </div>
 
 <h3 class="sectionedit6" id="voorbeeld_muziekjes_en_filmpjes">Voorbeeld muziekjes en filmpjes</h3>
-<div class="level3">
+<div >
 <ul>
 <li class="level1 node"><div class="li">Bladmuziek <a class="urlextern" href="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/139" rel="nofollow" title="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/139">Texel Gigue</a>:   </div>
 <ul>
-<li class="level2"><div class="li"><a class="urlextern" href="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/sheets/download/370" rel="nofollow" title="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/sheets/download/370">PDF Bladmuziek</a></div>
+<li ><div class="li"><a class="urlextern" href="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/sheets/download/370" rel="nofollow" title="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/sheets/download/370">PDF Bladmuziek</a></div>
 </li>
-<li class="level2"><div class="li"><a class="urlextern" href="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/sheets/download/370/midi" rel="nofollow" title="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/sheets/download/370/midi">midi</a></div>
+<li ><div class="li"><a class="urlextern" href="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/sheets/download/370/midi" rel="nofollow" title="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/sheets/download/370/midi">midi</a></div>
 </li>
 </ul>
 </li>
-<li class="level1"><div class="li">Opname  <a class="urlextern" href="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/139" rel="nofollow" title="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/139">Texel Gigue</a></div>
+<li ><div class="li">Opname  <a class="urlextern" href="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/139" rel="nofollow" title="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/139">Texel Gigue</a></div>
 </li>
 </ul>
 <ul>
-<li class="level1"><div class="li">Op Elf Fantasy Fair (<a class="urlextern" href="http://embrun.be/" rel="nofollow" title="http://embrun.be/">EmBRUN</a>)</div>
+<li ><div class="li">Op Elf Fantasy Fair (<a class="urlextern" href="http://embrun.be/" rel="nofollow" title="http://embrun.be/">EmBRUN</a>)</div>
 </li>
 </ul>
 <iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/fqx-kKXLIWE" width="425"></iframe><ul>
-<li class="level1"><div class="li">Gonnagles (Musicon)</div>
+<li ><div class="li">Gonnagles (Musicon)</div>
 </li>
 </ul>
 <iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/UhtkFaeZm20" width="425"></iframe><ul>
-<li class="level1"><div class="li">Country versie, maar geeft goed de basis weer </div>
+<li ><div class="li">Country versie, maar geeft goed de basis weer </div>
 </li>
 </ul>
 <iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/8kzn58gpDFk" width="425"></iframe><ul>
-<li class="level1"><div class="li">Chapelloise</div>
+<li ><div class="li">Chapelloise</div>
 </li>
 </ul>
 <iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/0o5TBDryY9E" width="425"></iframe>
 </div>
 
 <h3 class="sectionedit7" id="externe_pagina_s">Externe Pagina's</h3>
-<div class="level3">
+<div >
 <ul>
-<li class="level1"><div class="li"><a class="urlextern" href="http://www.folkroddels.be/artikels/1548.html" rel="nofollow" title="http://www.folkroddels.be/artikels/1548.html">Folkroddels.be: Waarom dansen wij het Aapje op een jig?</a></div>
+<li ><div class="li"><a class="urlextern" href="http://www.folkroddels.be/artikels/1548.html" rel="nofollow" title="http://www.folkroddels.be/artikels/1548.html">Folkroddels.be: Waarom dansen wij het Aapje op een jig?</a></div>
 </li>
 </ul>
 
