--- a/source/web/dansen/polka.html
+++ b/source/web/dansen/polka.html
@@ -1,7 +1,7 @@
 
 </div><div class="dw-content">
 <h3 class="sectionedit1" id="polka">Polka</h3>
-<div class="level3">
+<div >
 
 <p>
 Springerige parendans
@@ -43,33 +43,33 @@ Als je het nog niet zo goed kunt dat je in een rechte lijn de dansvloer tegen de
 Heel veel, wees crea! Een kort lijstje:
 </p>
 <ul>
-<li class="level1"><div class="li">Variaties in stijl: je kan de polka heel plat dansen (bijna niet springen) of net heel springerig </div>
+<li ><div class="li">Variaties in stijl: je kan de polka heel plat dansen (bijna niet springen) of net heel springerig </div>
 </li>
-<li class="level1"><div class="li"> Variaties in plaats: de variaties van wals en scottisch zijn ook bruikbaar voor de polka. </div>
+<li ><div class="li"> Variaties in plaats: de variaties van wals en scottisch zijn ook bruikbaar voor de polka. </div>
 </li>
-<li class="level1"><div class="li">Variaties in ritme: je kan de polkapas afwisselen met de pas van deel B van de scottisch, liefst op het einde van een muzikaal deeltje. </div>
+<li ><div class="li">Variaties in ritme: je kan de polkapas afwisselen met de pas van deel B van de scottisch, liefst op het einde van een muzikaal deeltje. </div>
 </li>
 </ul>
 
 </div>
 
 <h3 class="sectionedit6" id="voorbeeld_muziekjes_en_filmpjes">Voorbeeld muziekjes en filmpjes</h3>
-<div class="level3">
+<div >
 <ul>
-<li class="level1"><div class="li"><a class="urlextern" href="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/269" rel="nofollow" title="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/269">Bladmuziek Polka van Wim</a> (PDF en midi)   </div>
+<li ><div class="li"><a class="urlextern" href="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/269" rel="nofollow" title="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/269">Bladmuziek Polka van Wim</a> (PDF en midi)   </div>
 </li>
-<li class="level1"><div class="li"><a class="urlextern" href="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/269" rel="nofollow" title="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/269">Opname Polka van Wim</a>: </div>
+<li ><div class="li"><a class="urlextern" href="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/269" rel="nofollow" title="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/269">Opname Polka van Wim</a>: </div>
 </li>
 </ul>
 
 </div>
 
 <h3 class="sectionedit7" id="externe_pagina_s">Externe Pagina's</h3>
-<div class="level3">
+<div >
 <ul>
-<li class="level1"><div class="li"><a class="urlextern" href="BFdances.html#polka" rel="nofollow" title="http://celticbompa.4t.com/BFdances.html#polka">Celtic Bompa Polka</a></div>
+<li ><div class="li"><a class="urlextern" href="BFdances.html#polka" rel="nofollow" title="http://celticbompa.4t.com/BFdances.html#polka">Celtic Bompa Polka</a></div>
 </li>
-<li class="level1"><div class="li"><a class="urlextern" href="http://www.folkroddels.be/artikels/3471.html" rel="nofollow" title="http://www.folkroddels.be/artikels/3471.html">Folkroddels.be: Juffrouw wil jij de polka leren</a> </div>
+<li ><div class="li"><a class="urlextern" href="http://www.folkroddels.be/artikels/3471.html" rel="nofollow" title="http://www.folkroddels.be/artikels/3471.html">Folkroddels.be: Juffrouw wil jij de polka leren</a> </div>
 </li>
 </ul>
 
