--- a/source/web/dansen/polska.html
+++ b/source/web/dansen/polska.html
@@ -1,7 +1,7 @@
 
 </div><div class="dw-content">
 <h3 class="sectionedit1" id="polska">Polska</h3>
-<div class="level3">
+<div >
 
 <p>
 De polska is een van origine Zweedse dans. Er zijn hiervan vele variaties waarbij de meesten worden geteld in drieën en het accent en daarmee ook de stap in de basispas op de 1 en de 3 ligt. Je krijgt qua telling dus <strong>1</strong>2<strong>3</strong> <strong>1</strong>2<strong>3</strong>.
@@ -10,7 +10,7 @@ De polska is een van origine Zweedse dans. Er zijn hiervan vele variaties waarbi
 </div>
 
 <h3 class="sectionedit2" id="bingsjoe">Bingsjö</h3>
-<div class="level3">
+<div >
 
 <p>
 Bingsjö de polska variant die in Nederland het meest gedanst wordt en hier dan ook algemeen gezien wordt als dé polska.
@@ -67,7 +67,7 @@ Om de stappen in het draai-gedeelte goed onder de knie te krijgen, is het nuttig
 </div>
 
 <h5 id="bakmes">Bakmes</h5>
-<div class="level5">
+<div >
 
 <p>
 Bij bakmes draai je linksom in plaats van rechtsom. (Betere uitleg gewenst.)
@@ -77,27 +77,27 @@ Bij bakmes draai je linksom in plaats van rechtsom. (Betere uitleg gewenst.)
 Andere vormen van polska's of afgeleiden hiervan (op basis van muziek en/of de dans) zijn:
 </p>
 <ul>
-<li class="level1"><div class="li"><a class="wikilink2" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕polska﹕boda.html" rel="nofollow" title="nl:dansen:polska:boda">Boda</a></div>
+<li ><div class="li"><a class="wikilink2" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕polska﹕boda.html" rel="nofollow" title="nl:dansen:polska:boda">Boda</a></div>
 </li>
-<li class="level1"><div class="li"><a class="wikilink2" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕polska﹕springlek.html" rel="nofollow" title="nl:dansen:polska:springlek">Springlek</a></div>
+<li ><div class="li"><a class="wikilink2" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕polska﹕springlek.html" rel="nofollow" title="nl:dansen:polska:springlek">Springlek</a></div>
 </li>
-<li class="level1"><div class="li"><a class="wikilink2" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕polska﹕slaengpolska.html" rel="nofollow" title="nl:dansen:polska:slaengpolska">Slängpolska</a></div>
+<li ><div class="li"><a class="wikilink2" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕polska﹕slaengpolska.html" rel="nofollow" title="nl:dansen:polska:slaengpolska">Slängpolska</a></div>
 </li>
-<li class="level1"><div class="li"><a class="wikilink2" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕polska﹕slaengpolska.html" rel="nofollow" title="nl:dansen:polska:finnskogpols">Finnskogpols</a></div>
+<li ><div class="li"><a class="wikilink2" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕polska﹕slaengpolska.html" rel="nofollow" title="nl:dansen:polska:finnskogpols">Finnskogpols</a></div>
 </li>
 </ul>
 
 </div>
 
 <h3 class="sectionedit7" id="voorbeeld_muziekjes_en_filmpjes">Voorbeeld muziekjes en filmpjes</h3>
-<div class="level3">
+<div >
 <iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/Cx1qx288lZI" width="425"></iframe>
 </div>
 
 <h3 class="sectionedit8" id="externe_pagina_s">Externe Pagina's</h3>
-<div class="level3">
+<div >
 <ul>
-<li class="level1"><div class="li"><a class="urlextern" href="BFdances.html#polska" rel="nofollow" title="http://celticbompa.4t.com/BFdances.html#polska">Celtic Bompa Polksa</a></div>
+<li ><div class="li"><a class="urlextern" href="BFdances.html#polska" rel="nofollow" title="http://celticbompa.4t.com/BFdances.html#polska">Celtic Bompa Polksa</a></div>
 </li>
 </ul>
 
