--- a/source/web/dansen/rondo.html
+++ b/source/web/dansen/rondo.html
@@ -1,7 +1,7 @@
 
 </div><div class="dw-content">
 <h3 class="sectionedit1" id="rondo">Rondo</h3>
-<div class="level3">
+<div >
 
 <p>
 Vlotte rijdans met lekker veel vaart
@@ -21,13 +21,13 @@ Iedereen in 1 of meerdere lange slierten, mannen/vrouwen maakt niet uit
 <h4 class="sectionedit3" id="basis">Basis</h4>
 <div class="level4">
 <ul>
-<li class="level1"><div class="li">zij sluit zij (te beginnen met links, naar links) </div>
+<li ><div class="li">zij sluit zij (te beginnen met links, naar links) </div>
 </li>
-<li class="level1"><div class="li">stap hop (op R) </div>
+<li ><div class="li">stap hop (op R) </div>
 </li>
-<li class="level1"><div class="li">zij sluit zij (te beginnen met L, naar links) </div>
+<li ><div class="li">zij sluit zij (te beginnen met L, naar links) </div>
 </li>
-<li class="level1"><div class="li">zij sluit zij (op de plaats, met R te beginnen) </div>
+<li ><div class="li">zij sluit zij (op de plaats, met R te beginnen) </div>
 </li>
 </ul>
 
@@ -40,16 +40,16 @@ Armzwaai van langs het lichaam naar iets omhoog op elke eerste tel van elke maat
 <h4 class="sectionedit4" id="variaties">Variaties</h4>
 <div class="level4">
 <ul>
-<li class="level1"><div class="li"><a class="wikilink2" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕rondeau_en_couple.html" rel="nofollow" title="nl:dansen:rondeau_en_couple">Rondeau en Couple</a></div>
+<li ><div class="li"><a class="wikilink2" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕rondeau_en_couple.html" rel="nofollow" title="nl:dansen:rondeau_en_couple">Rondeau en Couple</a></div>
 </li>
 </ul>
 
 </div>
 
 <h3 class="sectionedit5" id="voorbeeld_muziekjes_en_filmpjes">Voorbeeld muziekjes en filmpjes</h3>
-<div class="level3">
+<div >
 <ul>
-<li class="level1"><div class="li">Rondeau en Couple (door Bert Leemans en Jeroen Geerinck) </div>
+<li ><div class="li">Rondeau en Couple (door Bert Leemans en Jeroen Geerinck) </div>
 </li>
 </ul>
 <iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/rtVukyXDG0M" width="425"></iframe>
