--- a/source/web/events/dansstage.html
+++ b/source/web/events/dansstage.html
@@ -1,7 +1,7 @@
 
 </div><div class="dw-content">
 <h3 class="sectionedit1" id="dansstage">Dansstage</h3>
-<div class="level3">
+<div >
 
 <p>
 De dansstage is een weekend vol Balfolk dansen in Enschede. Er zijn workshops voor ieder niveau, dus iedereen die van dansen houdt, van beginner tot gevorderde, is van harte welkom op dit weekend.
@@ -18,9 +18,9 @@ Het belangrijkste is echter de sfeer. Elk jaar voelen we ons dankbaar dat we dit
 </div>
 
 <h3 class="sectionedit2" id="externe_pagina_s">Externe Pagina's</h3>
-<div class="level3">
+<div >
 <ul>
-<li class="level1"><div class="li"><a class="urlextern" href="http://www.dansstage.nl/" rel="nofollow" title="http://www.dansstage.nl/">Officiële website</a></div>
+<li ><div class="li"><a class="urlextern" href="http://www.dansstage.nl/" rel="nofollow" title="http://www.dansstage.nl/">Officiële website</a></div>
 </li>
 </ul>
 
