--- a/source/web/start_do.html
+++ b/source/web/start_do.html
@@ -6,7 +6,7 @@ Deze pagina is een alias naar de Nederlandse startpagina. De echte pagina staat 
 <div class="plugin_include_content plugin_include__nl:start" id="plugin_include__nl__start">
 
 <h1 class="sectionedit3" id="welkom_op_de_danswiki">Welkom op de DansWiki!</h1>
-<div class="level1">
+<div >
 
 <p>
 Deze wiki bevat informatie over verschillende balfolk dansen, hun variaties en tips voor dansers, instructeurs en muzikanten. Iedereen is welkom om de informatie op deze site te verbeteren en aan te vullen, daarvoor kun je je <a class="urlextern" href="doku.php﹖id=doku.php﹖id=nl﹕start.html" rel="nofollow" title="doku.php﹖id=doku.php﹖id=nl﹕start.html">hier</a> aanmelden om een account te maken.
@@ -23,37 +23,37 @@ Deze DansWiki is ook nog vol in ontwikkeling en het zou kunnen dat er aan het th
 </div>
 
 <h1 class="sectionedit4" id="algemeen">Algemeen</h1>
-<div class="level1">
+<div >
 <ul>
-<li class="level1"><div class="li"><a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕algemeen﹕balfolk.html" title="nl:algemeen:balfolk">Balfolk</a>	</div>
+<li ><div class="li"><a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕algemeen﹕balfolk.html" title="nl:algemeen:balfolk">Balfolk</a>	</div>
 </li>
-<li class="level1"><div class="li"><a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕algemeen﹕danshouding.html" title="nl:algemeen:danshouding">Danshouding</a></div>
+<li ><div class="li"><a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕algemeen﹕danshouding.html" title="nl:algemeen:danshouding">Danshouding</a></div>
 </li>
-<li class="level1"><div class="li"><a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕algemeen﹕etikette.html" title="nl:algemeen:etikette">Etikette</a></div>
+<li ><div class="li"><a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕algemeen﹕etikette.html" title="nl:algemeen:etikette">Etikette</a></div>
 </li>
-<li class="level1"><div class="li"><a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕algemeen﹕gevraagd.html" title="nl:algemeen:gevraagd">Gevraagd</a></div>
+<li ><div class="li"><a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕algemeen﹕gevraagd.html" title="nl:algemeen:gevraagd">Gevraagd</a></div>
 </li>
-<li class="level1"><div class="li"><a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕algemeen﹕links.html" title="nl:algemeen:links">Links</a></div>
+<li ><div class="li"><a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕algemeen﹕links.html" title="nl:algemeen:links">Links</a></div>
 </li>
-<li class="level1"><div class="li"><a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕algemeen﹕nieuws.html" title="nl:algemeen:nieuws">Nieuws</a></div>
+<li ><div class="li"><a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕algemeen﹕nieuws.html" title="nl:algemeen:nieuws">Nieuws</a></div>
 </li>
-<li class="level1"><div class="li"><a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕algemeen﹕terminologie.html" title="nl:algemeen:terminologie">Terminologie</a></div>
+<li ><div class="li"><a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕algemeen﹕terminologie.html" title="nl:algemeen:terminologie">Terminologie</a></div>
 </li>
-<li class="level1"><div class="li">Hoe werkt de <a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕algemeen﹕danswiki.html" title="nl:algemeen:danswiki">DansWiki</a></div>
+<li ><div class="li">Hoe werkt de <a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕algemeen﹕danswiki.html" title="nl:algemeen:danswiki">DansWiki</a></div>
 </li>
 </ul>
 
 </div>
 
 <h1 class="sectionedit5" id="dansen">Dansen</h1>
-<div class="level1">
+<div >
 <ul>
 <li class="level1 node"><div class="li"><a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕an_dro.html" title="nl:dansen:an_dro">An Dro</a></div>
 <ul>
-<li class="level2"><div class="li"><a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕an_dro.html" title="nl:dansen:an_dro:an_dro_retourne">An Dro retourné</a>     </div>
+<li ><div class="li"><a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕an_dro.html" title="nl:dansen:an_dro:an_dro_retourne">An Dro retourné</a>     </div>
 </li>
 </ul>
 </li>
 <li class="level1 node"><div class="li"><a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕bourree_du_berry﹕kadootjesbourree.html" title="nl:dansen:bourree_du_berry">Bourrée du Berry</a> (Bourrée in 2)</div>
 <ul>
-<li class="level2"><div class="li"></div></li></ul></li></ul></div></div></div></article></body></html>
+<li ><div class="li"></div></li></ul></li></ul></div></div></div></article></body></html>
